force-app/main/default/objects/Remittance_Group_Mapping_For_PoC__c/Remittance_Group_Mapping_For_PoC__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for Canaccede PoC document field mapping</description>
    <label>Remittance Group Mapping For PoC</label>
</CustomObject>