force-app/main/default/objects/Remittance_Group_Mapping_For_PoC__c/fields/Account_Number1__c.field-meta.xml
<CustomField>
    <fullName>Account_Number1__c</fullName>
    <description>Account Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>