force-app/main/default/objects/Remittance_Group_Mapping_For_PoC__c/fields/Bank_Account1__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account1__c</fullName>
    <description>Bank Account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Bank Account</inlineHelpText>
    <label>Bank Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>