force-app/main/default/objects/Remittance_Group_Mapping_For_PoC__c/fields/Entity_Name1__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name1__c</fullName>
    <description>Entity Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Entity Name</inlineHelpText>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>