force-app/main/default/objects/Remittance_Group_Mapping_For_PoC__c/fields/Transit_Number__c.field-meta.xml
<CustomField>
    <fullName>Transit_Number__c</fullName>
    <description>Transit Number</description>
    <inlineHelpText>Transit Number</inlineHelpText>
    <label>Transit Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>